--- a/construtora/src/main/resources/application.properties
+++ b/construtora/src/main/resources/application.properties
@@ -19,3 +19,4 @@ spring.datasource.hikari.connection-timeout=30000
 
 spring.web.resources.static-locations=classpath:/static/,classpath:/uploads/
 
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
