--- a/construtora-front/package.json
+++ b/construtora-front/package.json
@@ -10,7 +10,8 @@
     "axios": "^1.9.0",
     "next": "latest",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "swiper": "^11.2.6"
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
