--- a/construtora-front/package.json
+++ b/construtora-front/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^12.12.21",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
+    "@types/swiper": "^5.4.3",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.4.1",
